# FastAPI-Pytest-Examples

./: README.md  pyproject.toml
src/: main.py  utils.py
tests/: conftest.py  test_main.py  test_utils.py
