[project]
name = "fastapi-pytest-example"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "GGGoingdown", email = "eddiepai0401@gmail.com"},
]
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.28.1",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
package-type = "application"

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
    "pytest-mock>=3.14.0",
]
